chore: move classpath and rename entry class to Launcher